fable/test/syntax_error/bad_format_6.f
      program prog
      write(6, '(tx)')
      end
